[package]
name = "future-tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
colored = "2.0.0"
eframe = "0.21.3"
egui = "0.21.0"
inquire = { version = "0.5.3", features = [ "date" ]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
